examples/test/testpolicy15226.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15226
  namespace: namespace414
spec:
  podSelector:
    matchLabels:
      key22: value32
      key43: value47
      key37: value14
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key11: value4
      podSelector:
        matchLabels:
          key7: value40
          key13: value13
